# pdfExtractor

./: .dockerignore  .env.example  .gitignore  .workflow-test  CHANGELOG.md  CLAUDE.md  Dockerfile  PDF_Deal_Jacket_Splitter_Overview.docx  PDF_Deal_Jacket_Splitter_Overview.md  PDF_split_and_Mine.docx  README.md  azure-deploy.sh  pyproject.toml  run-local.ps1  run.ps1  trial_stats.md
.claude/: settings.json
.github/workflows/: mirror-to-azure-devops.yml
docs/superpowers/plans/: 2026-04-23-image-pdf-splitter.md  2026-05-15-image-splitter-refactor.md  2026-05-15-perceptual-hash-dedup.md
docs/superpowers/specs/: 2026-04-23-image-pdf-splitter-design.md  2026-05-15-image-splitter-refactor-design.md  2026-05-15-perceptual-hash-dedup-design.md
src/pdf_extractor/: __init__.py  azure_storage.py  cli.py  dedup.py  extractor.py  genpdf.py  image_splitter.py  ocr_runtime.py  opt_in_extractor.py  overlap_splitter.py  page_analysis.py  title_detection.py
tests/: test_extractor.py  test_image_splitter.py
